# pass-git-helper

./: .osvignore  .safety-project.ini  CONTRIBUTING.md  Dockerfile.ci  SECURITY_QUICKSTART.md  SECURITY_SETUP.md  SECURITY_UNIVERSAL_SETUP.md  osv-scanner.toml  passgithelper.py  pyproject.toml  requirements-check.txt  requirements-dev.txt  test_passgithelper.py
.github/workflows/: ci.yml  safety-scan.yml  security-scan.yml  security.yml
docs/: LOCAL_CI_CD.md  SECURITY_IMPLEMENTATION.md  SECURITY_OPTIONS.md
scripts/: docker-ci.sh  local-ci.sh  quick-safety-setup.sh  security-scan.sh  setup-safety-mcp.sh  setup-universal-security.sh  simple-ci.sh  universal-security-scan.sh
