[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pass-git-helper"
dynamic = ["version"]
authors = [
    {name = "Johannes Wienke", email = "languitar@semipol.de"},
]
description = "A git credential helper interfacing with pass, the standard Unix password manager"
readme = "README.md"
license = {text = "LGPL-3.0-or-later"}
keywords = [
    "git",
    "passwords", 
    "pass",
    "credentials",
    "password store"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "pyxdg",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov", 
    "pytest-mock",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.0.0",
    "ruff>=0.11.0",
    "safety>=3.0.0",
    "pip-audit>=2.0.0",
    "bandit>=1.8.0",
    "build>=1.0.0",
    "semgrep>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/languitar/pass-git-helper"
Repository = "https://github.com/languitar/pass-git-helper"

[project.scripts]
pass-git-helper = "passgithelper:main"

[tool.setuptools]
py-modules = ["passgithelper"]

[tool.setuptools.dynamic]
version = {attr = "passgithelper.__version__"}

[tool.ruff]
src = ["src"]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "D",
    "ANN",
    "S",
    # "BLE",
    "B",
    "A",
    "C4",
    "T10",
    "DTZ",
    "EXE",
    "ISC",
    "G",
    "PIE",
    "T20",
    "PT",
    "Q",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "TCH",
    "ARG",
    "PTH",
    "ERA",
    "TRY",
    "RUF",
]
ignore = [
    # Not available in all supported Python versions
    "B905",
    # Black will handle this
    "E501",
    # Do not require docstrings everywhere
    "D1",
    # No need to add type annotation to self and cls
    "ANN10",
    # Allow Any
    "ANN401",
    # We use assert only for documentation purposes and debugging.
    "S101",
    # We need this here
    "S603",
    "S607",
    # I don't like this style
    "TRY300",
    # Gives some readability sometimes, No need to prevent this style
    "RET505",
    # This is the style used in this project.
    "TID252",
    # Will be fixed lated.
    "TRY003",
    "TRY301",
]

[tool.ruff.lint.per-file-ignores]
"test_passgithelper.py" = [
    # Allow hard-coded passwords in tests
    "S105",
    "S106",
    # Allow potentially insecure temp directory access
    "S108",
    # Sometimes needed for the current tests
    "SLF",
]
"src/autosuspend/checks/ical.py" = [
    # Terrible hack accessing internal members required to handle rrules correctly.
    "SLF001",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
